Bug 1905022 - Exit WMFMediaDataDecoder::ProcessOutput() if video track uses zero video frame copy and it gets one output r=media-playback-reviewers,alwu

There were cases that WMFVideoMFTManager::Output() was called more than 10 times within WMFVideoMFTManager::Output(). In this case, WMFVideoMFTManager::Output() did not exit when zero video frame copy was used.

Differential Revision: https://phabricator.services.mozilla.com/D216775